z-index issue fixed for safari

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -377,14 +377,14 @@ button:hover {
     height: 100%;
     background: rgba(0, 0, 0, 0.3);
     backdrop-filter: blur(10px);
-    z-index: 2;
+    z-index: 3;
     animation: fadein 1s ease-in;
 }
 
   /* Overlay content */
   .overlay_content {
     width: 70%;
-    z-index: 3;
+    z-index: 4;
     margin-left: 60px;
     margin-top: 40px;
     overflow-y: auto;
